Feature(Basic  pages): create homepage and about me pages [Start #169797144]

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
     <meta charset="8" />
-    <title>UniNet Blogs</title>
+    <title>Musinda Kadhuwa</title>
   </head>
   <body>
     <div id="root"></div>
